[package]
name = "simd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
rand = "0.8.5"

[target.'cfg(target_family = "windows")']
rustflags = ["-Ctarget-feature=+sse3,+ssse3,+sse4.1,+sse4.2,+avx,+avx2,+fma"]
